--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 
   <div id="intro-screen">
     <div id="banner-section">
-      <img src="C:\Users\HP\test1para" alt="Quiz Banner">
+      <img src="https://github.com/Adkve/mock1para/blob/main/banner.png?raw=true" alt="Quiz Banner">
     </div>
     <div id="instruction-section">
       <img src="C:\Users\HP\test1para" alt="Quiz Instructions">
