--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
       <img src="https://github.com/Adkve/mock1para/blob/main/banner.png?raw=true" alt="Quiz Banner">
     </div>
     <div id="instruction-section">
-      <img src="C:\Users\HP\test1para" alt="Quiz Instructions">
+      <img src="https://github.com/Adkve/mock1para/blob/main/instructions.png?raw=true" alt="Quiz Instructions">
     </div>
     <button type="button" id="startButton">Start Quiz</button>
   </div>
