--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
         <label><input type="radio" name="q4" value="4"><span> Option 4</span></label>
       </div>
       <div class="question" id="q5">
-        <p>5. <img src="https://placehold.co/600x200/aed6f1/1a5276?text=Physics+Question+5" alt="Physics Question 5"></p>
+        <p>5. <img src="https://github.com/Adkve/mock1para/blob/main/image.png?raw=true" alt="Physics Question 5"></p>
         <label><input type="radio" name="q5" value="1"><span> Option 1</span></label>
         <label><input type="radio" name="q5" value="2"><span> Option 2</span></label>
         <label><input type="radio" name="q5" value="3"><span> Option 3</span></label>
