--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
       <div class="section-heading">👉 Starting Now: Physics Section</div>
       
       <div class="question" id="q1">
-        <p>1. <img src="https://placehold.co/600x200/aed6f1/1a5276?text=Physics+Question+1" alt="Physics Question 1"></p>
+        <p>1. <img src="https://github.com/Adkve/mock1para/blob/main/1%20q.jpg?raw=true" alt="Physics Question 1"></p>
         <label><input type="radio" name="q1" value="1"><span> Option 1</span></label>
         <label><input type="radio" name="q1" value="2"><span> Option 2</span></label>
         <label><input type="radio" name="q1" value="3"><span> Option 3</span></label>
