--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
         <label><input type="radio" name="q1" value="4"><span> Option 4</span></label>
       </div>
       <div class="question" id="q2">
-        <p>2. <img src="https://placehold.co/600x200/aed6f1/1a5276?text=Physics+Question+2" alt="Physics Question 2"></p>
+        <p>2. <img src="https://github.com/Adkve/mock1para/blob/main/q2.jpg?raw=true" alt="Physics Question 2"></p>
         <label><input type="radio" name="q2" value="1"><span> Option 1</span></label>
         <label><input type="radio" name="q2" value="2"><span> Option 2</span></label>
         <label><input type="radio" name="q2" value="3"><span> Option 3</span></label>
